# kaasb

./: .claudeignore  .dockerignore  .editorconfig  .env.example  .env.production.example  .env.production.template  .env.staging.example  .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_QUALITY_AUDIT_REPORT.md  CONTRIBUTING.md  FLAGGED_SECRETS.md  PERFORMANCE_AUDIT_REPORT.md  README.md  SECURITY_AUDIT_REPORT.md  SEO_AUDIT_REPORT.md  deploy.sh  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  kaasb_complete_audit_prompts.docx  server-setup.sh  skills.md  test_api.py
backend/: .dockerignore  .env.example  alembic.ini  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  test_api.py
backend/alembic/: env.py
backend/alembic/versions/: 1f80b6c6f2e9_initialclear.py  25c8a4c398f9_initial.py  40dda097581c_refresh_tokens_and_login_throttling.py  8708878f9950_add_refresh_tokens_table.py  a1b2c3d4e5f6_gig_marketplace.py  a1b2c3d4e5f6_gig_review_audit_and_notification_types.py  a205fe7eef29_add_admin_fields_and_final_schema_.py  a3v4w5x6y7z8_users_locale_column.py  a3w4x5y6z7a8_add_qi_card_account_number.py  a3w4x5y6z7a8_chat_conversation_partial_uniq.py  ae6a5c343032_qi_card_payment_integration.py  b0638a178b74_add_reviews_notifications_conversations_.py  b2c3d4e5f6a7_gig_needs_revision_status_and_note.py  b2c3d4e5f6a7_qi_card_only_payments.py  b3f9e2a1c456_add_token_version_to_users.py  b4w5x6y7z8a9_notifications_user_is_read_idx.py  b4x5y6z7a8b9_add_qi_card_account_number.py  b4x5y6z7a8b9_support_ticket_lifecycle.py  c3d4e5f6a7b8_phone_otp_table.py  c5x6y7z8a9b0_notifications_archive_and_email_pref.py  c7d4e8f2a901_performance_indexes.py  d1a2b3c4d5e6_fix_monetary_types.py  d4e5f6a7b8c9_schema_drift_fix.py  d6y7z8a9b0c1_add_qi_card_account_number.py  d6y7z8a9b0c1_conversations_staff_scope_and_unique.py  e2b3c4d5e6f7_schema_hardening.py  e5f6a7b8c9d0_social_ids_nullable_password_iqd.py  e7z8a9b0c1d2_reviews_service_order_path.py  f1a2b3c4d5e6_gig_review_audit_and_notification_types.py  f2a3b4c5d6e7_gig_needs_revision_status_and_note.py  f32778932130_add_jobs_table.py  f3a4b5c6d7e8_legal_compliance.py  f88d375ec75a_add_payment_accounts_transactions_.py  f8a9b0c1d2e3_users_terms_acceptance.py  g3b4c5d6e7f8_gig_order_payment_wiring.py  g9b0c1d2e3f4_admin_audit_job_status_enum.py  h0c1d2e3f4g5_payment_provider_zain_cash.py  h4c5d6e7f8g9_session_metadata.py  i5d6e7f8g9h0_chat_system_phase1.py  j6e7f8g9h0i1_chat_system_phase3.py  (+18 more)
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/core/: config.py  database.py  exceptions.py  limiter.py  security.py
backend/app/middleware/: monitoring.py  security.py
backend/app/models/: __init__.py  admin_audit.py  base.py  buyer_request.py  contract.py  dispute.py  gig.py  job.py  message.py  notification.py  payment.py  phone_otp.py  proposal.py  (+6 more)
backend/scripts/: create_admin.py  seed_categories.py
backend/tests/: conftest.py
(+381 files in other folders)
